--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
