--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,13 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:14
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=marketsage
-    ports:
-      - '5432:5432'
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    image: supreme070/market-sage:latest   # your Docker Hub repo/tag
     restart: always
     ports:
       - '3000:3000'
-    depends_on:
-      - db
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/marketsage
-      - NODE_ENV=production
-
-volumes:
-  postgres_data:
+    env_file:
+      - .env
